# gradekeeper-server

./: .dockerignore  .env  .env.template  .gitignore  Cargo.toml  Containerfile  README.md  build.rs
.github/workflows/: podman-build.yml
migrations/2023-07-13-023811_init/: down.sql  up.sql
migrations/2023-07-14-110116_add_foreign_keys/: down.sql  up.sql
migrations/2023-07-14-112420_fix_nullable_on_subcomponent/: down.sql  up.sql
migrations/2023-07-14-120033_rename_tables/: down.sql  up.sql
migrations/2024-06-18-065057_add_component_sequences/: down.sql  up.sql
migrations/2024-06-20-222413_add_fk_indexes/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  models.rs  schema.rs
src/middleware/: auth.rs
src/routes/: health.rs  mod.rs
src/routes/api/: mod.rs
src/routes/api/auth/: callback.rs  login.rs  mod.rs
src/routes/api/block/: block_id.rs  create.rs  mod.rs
src/routes/api/block/_block_id/: import.rs  mod.rs
src/routes/api/block/_block_id/course/: course_id.rs  create.rs  mod.rs
src/routes/api/block/_block_id/course/_course_id/: mod.rs  order.rs
src/routes/api/block/_block_id/course/_course_id/component/: component_id.rs  mod.rs
src/routes/api/block/course/: course_id.rs  create.rs
src/routes/api/block/course/_course_id/: mod.rs
src/routes/api/block/course/_course_id/component/: component_id.rs  mod.rs
src/routes/api/users/: me.rs  mod.rs
