[package]
name = "gk-server"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
diesel = { version = "2.3.3", features = ["time", "extras", "r2d2", "postgres", "numeric"] }

dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors", "trace", "add-extension", "sensitive-headers"] }
tracing-subscriber = "0.3.20"
jsonwebtoken = { version= "10.2.0", features = ["rust_crypto"] }
hyper = { version = "1.8.1", features = ["client", "full"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
chrono = "0.4.42"
cuid2 = "0.1.4"

bigdecimal = { version = "0.4.9", features = ["serde"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
base64 = "0.22.1"
google-oauth = { version = "1.11.3" }
axum-extra = "0.12.2"
time = { version = "0.3.44", features = ["serde"]}

