[package]
name = "gk-server"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diesel = { version = "2.3.6", features = ["time", "extras", "r2d2", "postgres", "numeric"] }

dotenvy = "0.15.7"
tower-http = { version = "0.6.8", features = ["cors", "trace", "add-extension", "sensitive-headers"] }
tracing-subscriber = "0.3.22"
jsonwebtoken = { version= "10.3.0", features = ["rust_crypto"] }
hyper = { version = "1.8.1", features = ["client", "full"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
chrono = "0.4.44"
cuid2 = "0.1.4"

bigdecimal = { version = "0.4.10", features = ["serde"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
base64 = "0.22.1"
google-oauth = { version = "1.11.4" }
axum-extra = "0.12.5"
time = { version = "0.3.47", features = ["serde"]}

